# USPKart

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  README.md  drawing.cpp  drawing_primitives.cpp  game.cpp  shader.fs  vcpkg-configuration.json  vcpkg.json
include/glad/: glad.h
src/: CMakeLists.txt  config.cpp  config.hpp  drawingHelper.cpp  game.cpp  game.hpp  glad.c  graphicsHelper.cpp  graphicsHelper.hpp  primitives.cpp  resourceManager.cpp  utils.cpp  utils.hpp
src/assets/map/: default map.pgm  default.pgm  default.ppm
src/assets/models/: TestModel.gltf  arrow.mtl  block.mtl  kart.mtl  model.fbx  model.mtl  track.mtl  wheel.mtl
src/assets/shaders/: animatedModel.vs  model.fs  model.vs
src/assets/textures/kart/: SNES_Donut_Plains_1_walls.txt
src/controllers/: mapController.cpp  mapController.hpp
src/controls/: controlsHandler.cpp  controlsHandler.h  controlsHandler.hpp
src/game/: config.cpp  config.hpp  data.hpp  game.cpp  game.hpp  utils.cpp  utils.hpp
src/graphic/: drawingHelper.cpp  drawingHelper.hpp  gameWindow.cpp  gameWindow.hpp  graphicsHelper.cpp  graphicsHelper.hpp  primitives.cpp  primitives.hpp  skybox.cpp  skybox.hpp  uiProvider.cpp  uiProvider.hpp
src/graphic/camera/: camera.cpp  camera.hpp
src/graphic/camera/state/: cameraStates.cpp  cameraStates.hpp
src/graphic/model/: model.hpp
src/graphic/utils/: mesh.cpp  mesh.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp
src/headers/: config.hpp  drawingHelper.hpp  game.hpp  graphicsHelper.hpp  primitives.hpp  resourceManager.hpp  utils.hpp
src/model/: animatedModel.cpp  animatedModel.hpp  bone.cpp  bone.hpp  helper.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp
src/object/: character.hpp  collisionBox.cpp  collisionBox.hpp  kart.hpp  model.cpp  model.hpp  object.cpp  object.hpp  physicsObject.hpp  player.hpp  track.hpp
src/object/character/: aiChar.hpp  character.hpp  player.hpp
src/resource/: resourceManager.cpp  resourceManager.hpp
src/shader/: shader.cpp  shader.hpp
src/shaders/: shader.fs  shader.vs
src/utils/: camera.cpp  camera.hpp  data.hpp  logger.cpp  logger.hpp  position.cpp  position.hpp
